Replace Collect with toList